Forrest: fix bugs on safari & firefox

--- a/components/Forrest/style.less
+++ b/components/Forrest/style.less
@@ -1,9 +1,6 @@
 @import "~style/vars";
 
 .forrest {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
     height: 100%;
 
     &-row {
@@ -21,8 +18,7 @@
     }
 
     &-element {
-        flex: 1 1 auto;
-        fill: none;
+        height: 100%;
         padding: 2px;
 
         &--active {
